<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/logo"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/e_mail" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:text="@string/login"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/remember_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:text="@string/remember_password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/singup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:text="@string/singup"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>